propellor (4.0.4) UNRELEASED; urgency=medium

  * Propellor.Property.Restic added for yet another backup program.
    Thanks, Félix Sipma.
  * Bootstrap apt-get installs run with deconf noninteractive frontend.
  * spin --via: Avoid committing on relay host.

 -- Joey Hess <id@joeyh.name>  Thu, 27 Apr 2017 16:31:26 -0400

propellor (4.0.3) unstable; urgency=medium

  * Added Fstab.listed, Fstab.swap, and Mount.swapOn properties.
    Thanks, Daniel Brooks.
  * Added Propellor.Property.Bootstrap, which can be used to make
    disk images contain their own installation of propellor.

 -- Joey Hess <id@joeyh.name>  Thu, 20 Apr 2017 00:54:32 -0400

propellor (4.0.2) unstable; urgency=medium

  * Apt.mirror can be used to set the preferred apt mirror of a host,
    overriding the default CDN. This info is used by
    Apt.stdSourcesList and Sbuild.builtFor.
    Thanks, Sean Whitton.
  * Property.Partition: Update kpartx output parser, as its output format
    changed around version 0.6. Both output formats are supported now.
  * Fix bug when using setContainerProps with a chroot that prevented
    properties added to a chroot that way from being seen when propellor
    was running inside the chroot. This affected disk image creation, and
    possibly other things that use chroots.

 -- Joey Hess <id@joeyh.name>  Fri, 24 Mar 2017 14:04:50 -0400

propellor (4.0.1) unstable; urgency=medium

  * Fix build with pre-AMP ghc.
  * Tor: Restart daemon after installing private key.
  * Tor.named, Tor.torPrivKey: Include the new ed25519 public/private key
    pair in addition to the old secret_id_key.

 -- Joey Hess <id@joeyh.name>  Sun, 19 Mar 2017 16:18:11 -0400

propellor (4.0.0) unstable; urgency=medium

  * Added Monoid instances for Property and RevertableProperty.
  * Removed applyToList. Instead, use mconcat. (API change)
    If you had:  applyToList accountFor [User "joey", User "root"]
    use instead: mconcat (map accountFor [User "joey", User "root"])