@@ -138,32 +138,32 @@ data Service = Service
 	, serviceCommand :: String
 	, serviceOpts :: ServiceOpts
 	}
-	deriving (Show, Eq)
+	deriving (Show)
 
 data ServiceType 
-	= InetService (Maybe HostName) ServicePort
-	| UnixService FilePath PrivateService
-	| FifoService FilePath PrivateService
-	| PassService FilePath PrivateService
-	deriving (Show, Eq)
+	= InetService (Maybe HostName, ServicePort)
+	| UnixService FilePath
+	| FifoService FilePath
+	| PassService FilePath
+	deriving (Show)
 
 -- Can be a port number or service name such as "smtp".
 type ServicePort = String
 
-type PrivateService = Bool
-
 -- | Options for a service.
 data ServiceOpts = ServiceOpts
-	{ serviceUnprivileged :: Maybe Bool
+	{ servicePrivate :: Maybe Bool
+	, serviceUnprivileged :: Maybe Bool
 	, serviceChroot :: Maybe Bool
 	, serviceWakeupTime :: Maybe Int
 	, serviceProcessLimit :: Maybe Int
 	}
-	deriving (Show, Eq)
+	deriving (Show)
 
 defServiceOpts :: ServiceOpts
 defServiceOpts = ServiceOpts
-	{ serviceUnprivileged = Nothing
+	{ servicePrivate = Nothing
+	, serviceUnprivileged = Nothing
 	, serviceChroot = Nothing
 	, serviceWakeupTime = Nothing
 	, serviceProcessLimit = Nothing
@@ -172,21 +172,17 @@ defServiceOpts = ServiceOpts
 formatServiceLine :: Service -> File.Line
 formatServiceLine s = unwords $ map pad
 	[ (10, case serviceType s of
-		InetService (Just h) p -> h ++ ":" ++ p
-		InetService Nothing p -> p
-		UnixService f _ -> f
-		FifoService f _ -> f
-		PassService f _ -> f)
+		InetService (Just h, p) -> h ++ ":" ++ p
+		InetService (Nothing, p) -> p
+		UnixService f -> f
+		FifoService f -> f
+		PassService f -> f)
 	, (6, case serviceType s of
-		InetService _ _ -> "inet"
-		UnixService _ _ -> "unix"
-		FifoService _ _ -> "fifo"
-		PassService _ _ -> "pass")
-	, (8, case serviceType s of
-		InetService _ _ -> bool False
-		UnixService _ b -> bool b
-		FifoService _ b -> bool b
-		PassService _ b -> bool b)
+		InetService _ -> "inet"
+		UnixService _ -> "unix"
+		FifoService _ -> "fifo"
+		PassService _ -> "pass")
+	, (8, v bool servicePrivate)
 	, (8, v bool serviceUnprivileged)
 	, (8, v bool serviceChroot)
 	, (8, v show serviceWakeupTime)
@@ -197,7 +193,7 @@ formatServiceLine s = unwords $ map pad
 	v f sel = maybe "-" f (sel (serviceOpts s))
 	bool True = "y"
 	bool False = "n"
-	pad (n, t) = t ++ replicate (n - 1 - length t) ' '
+	pad (n, s) = s ++ replicate (n - 1 - length s) ' '
 
 -- | Note that this does not handle multi-line service entries,
 -- in which subsequent lines are indented. `serviceLine` does not generate
@@ -219,19 +215,19 @@ parseServiceLine l = Service
 				if null p
 					then Nothing
 					else Just $ InetService
-						(if null h then Nothing else Just h) p
-			"unix" -> UnixService <$> getword 1 <*> parseprivate
-			"fifo" -> FifoService <$> getword 1 <*> parseprivate
-			"pass" -> PassService <$> getword 1 <*> parseprivate
+						(if null h then Nothing else Just h, p)
+			"unix" -> UnixService <$> getword 1
+			"fifo" -> FifoService <$> getword 1
+			"pass" -> PassService <$> getword 1
 			_ -> Nothing
-	parseprivate = join . bool =<< getword 3
 	
 	parsecommand = case unwords (drop 7 ws) of
 		"" -> Nothing
 		s -> Just s
 
 	parseopts = ServiceOpts
-		<$> (bool =<< getword 4)
+		<$> (bool =<< getword 3)
+		<*> (bool =<< getword 4)
 		<*> (bool =<< getword 5)
 		<*> (int =<< getword 6)
 		<*> (int =<< getword 7)
@@ -251,18 +247,15 @@ parseServiceLine l = Service
 	nws = length ws
 
 -- | Enables a `Service` in postfix's `masterCfFile`.
-service :: Service -> RevertableProperty DebianLike DebianLike
+service :: Service -> RevertableProperty NoInfo
 service s = (enable <!> disable)
-	`describe` desc
+	`describe` ("enabled postfix service " ++ show (serviceType s))
   where
-	desc = "enabled postfix service " ++ show (serviceType s)
-	enable = masterCfFile `File.containsLine` (formatServiceLine s)
+	enable = masterCfFile `File.containsLine` l
 		`onChange` reloaded
-	disable = File.fileProperty desc (filter (not . matches)) masterCfFile
+	disable = masterCfFile `File.lacksLine` l
 		`onChange` reloaded
-	matches l = case parseServiceLine l of
-		Just s' | s' == s -> True
-		_ -> False
+	l = formatServiceLine s
 
 -- | Installs saslauthd and configures it for postfix, authenticating
 -- against PAM.
